--- a/src/assets/room.css
+++ b/src/assets/room.css
@@ -6,7 +6,7 @@
     -moz-osx-font-smoothing: grayscale;
     text-align: center;
     color: #f2e6e5;
-    margin-top: 30px;
+    margin: 30px;
     border: 5px;
     border-radius: 10px;
     border-color: red;
