--- a/src/assets/room.css
+++ b/src/assets/room.css
@@ -7,13 +7,23 @@
     text-align: center;
     color: #f2e6e5;
     margin: 30px;
-    border: 5px;
+    border: 10px;
     border-radius: 10px;
     border-color: red;
     position: absolute;
     display: block;
     background-color: black;
   }
+
+#room .postertitle  {
+    display: block;
+    font-size: 1.5em;
+    margin-block-start: 0.67em;
+    margin-block-end: 0.67em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+}
 
   #room .spacer {
     margin-left: 25px;
