got rid of the linkout component

--- a/src/assets/room.css
+++ b/src/assets/room.css
@@ -12,7 +12,7 @@
     border-color: red;
     position: absolute;
     display: block;
-    background-color: black;
+    background-color: transparent;
   }
 
 #room .postertitle  {
