--- a/src/assets/room.css
+++ b/src/assets/room.css
@@ -6,6 +6,7 @@
     -moz-osx-font-smoothing: grayscale;
     text-align: center;
     color: #f2e6e5;
+    width: 100%
     margin: 30px;
     border: 10px;
     border-radius: 10px;
@@ -27,8 +28,8 @@
 }
 
 #room  .center {
-  margin: auto;
-  width: 100%;
+  margin: 30px;
+  width:50%
   padding-left: 25px;
   }
 
