--- a/src/assets/room.css
+++ b/src/assets/room.css
@@ -16,11 +16,11 @@
     background-color: black; 
  }
 
-.darkwall {
+#room.darkwall {
     background-color: transparent;  
 }
 
-.lightwall {
+#room.lightwall {
     background-color: transparent;  
     color: #1f1d1d;
 }
