pit room update
pit room update

--- a/src/assets/room.css
+++ b/src/assets/room.css
@@ -18,7 +18,7 @@
 
 #room.darkwall {
     background-color: transparent;  
-}drive
+}
 
 #room.lightwall {
     background-color: transparent;  
@@ -89,3 +89,8 @@
       font-weight: bold;
     }
     
+    .webIframe {
+      position: absolute;
+      right:500px;
+      bottom:220px;
+    }
