Add pictures to Rotunda

--- a/src/assets/room.css
+++ b/src/assets/room.css
@@ -90,7 +90,7 @@
     }
     
     .webIframe {
-      position: absolute;
-      right:500px;
-      bottom:220px;
+      position: fixed;
+      left:-200px;
+      top:-120px;
     }
