Add a Label app for sources

--- a/src/assets/room.css
+++ b/src/assets/room.css
@@ -94,3 +94,9 @@
       left:-200px;
       top:-120px;
     }
+    
+    .labelTitle {
+      font-size:1.2em;
+      font-weight: bold;
+      line-height: 1.6;
+    }
