Edit Label and Title App

--- a/src/assets/room.css
+++ b/src/assets/room.css
@@ -100,3 +100,9 @@
       font-weight: bold;
       line-height: 1.6;
     }
+
+    .titleStyle {
+      font-size:2em;
+      font-weight: bold;
+      line-height: 1.6;
+    }
