Change font family order

--- a/src/assets/room.css
+++ b/src/assets/room.css
@@ -1,7 +1,7 @@
 /* Now, our styles */
 
 #room {
-    font-family: Avenir, Helvetica, Arial, sans-serif;
+    font-family: Avenir,  Arial, Helvetica, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     text-align: center;
