Presence gallery update

--- a/src/assets/room.css
+++ b/src/assets/room.css
@@ -88,7 +88,9 @@
       color: #78cfa8;
       font-weight: bold;
     }
-    
+    .largerText{
+      font-size: 3em;
+    }
     .webIframe {
       position: fixed;
       left:-200px;
