--- a/src/assets/room.css
+++ b/src/assets/room.css
@@ -116,12 +116,8 @@
       height: auto;
     }
 
-    #scaled-frame {
-      zoom: .75;
-      -moz-transform: scale(0.75);
-      -moz-transform-origin: 0 0;
-      -o-transform: scale(0.75);
-      -o-transform-origin: 0 0;
-      -webkit-transform: scale(0.75);
-      -webkit-transform-origin: 0 0;
-    }
+    #room .spacer-side {
+      margin-left: auto;
+      margin-right: auto;
+      /* margin: 25px; */
+      }
