Update Presence and Aura Gallery
Deleted unnecessary apps, made modifications on existing apps and added new ones

--- a/src/assets/room.css
+++ b/src/assets/room.css
@@ -74,6 +74,13 @@
     }  
     
 /* JP */
+   /* adding margin only to the side */
+   #room .spacer-side {
+    margin-left: auto;
+    margin-right: auto;
+    }
+
+    /*font styles*/
     .oblique {
       font-style:italic;
     }
@@ -91,24 +98,8 @@
     .largerText{
       font-size: 3em;
     }
-    .webIframe {
-      position: fixed;
-      left:-200px;
-      top:-120px;
-    }
-    
-    .labelTitle {
-      font-size:1.2em;
-      font-weight: bold;
-      line-height: 1.6;
-    }
 
-    .titleStyle {
-      font-size:2em;
-      font-weight: bold;
-      line-height: 1.6;
-    }
-
+    /*sizing image*/
     .full {
       padding: 0;
       margin:0;
@@ -116,8 +107,29 @@
       height: auto;
     }
 
-    #room .spacer-side {
-      margin-left: auto;
-      margin-right: auto;
-      /* margin: 25px; */
-      }
+    /* label vue-app */
+    .labelTitle {
+      font-size:1.2em;
+      font-weight: bold;
+      line-height: 1.6;
+    }
+    .labelLgTitle{
+      font-size:6em;
+      font-weight: bold;
+    }
+    .labelLgBody{
+      font-size:5em;
+    }
+    
+    /* title vue-app */
+    .titleStyle {
+      font-size:2em;
+      font-weight: bold;
+      line-height: 1.6;
+    }
+    .webIframe {
+      position: fixed;
+      left:-200px;
+      top:-120px;
+    }
+ 
