--- a/src/assets/room.css
+++ b/src/assets/room.css
@@ -127,9 +127,14 @@
       font-weight: bold;
       line-height: 1.6;
     }
-    .webIframe {
-      position: fixed;
-      left:-200px;
-      top:-120px;
-    }
+a {
+  color: #78cfa8;
+}
+a.alink:link {
+  color:#78cfa8;
+}
+a.alink:hover {
+  color: white;
+  background:#78cfa8;
+}
  
