--- a/src/assets/room.css
+++ b/src/assets/room.css
@@ -127,13 +127,13 @@
       font-weight: bold;
       line-height: 1.6;
     }
-a {
+.alink a {
   color: #78cfa8;
 }
-a.alink:link {
+.alink a:link {
   color:#78cfa8;
 }
-a.alink:hover {
+.alink a:hover {
   color: white;
   background:#78cfa8;
 }
