--- a/src/assets/room.css
+++ b/src/assets/room.css
@@ -17,7 +17,8 @@
  }
 
 #room.darkwall {
-    background-color: transparent;  
+    background-color: transparent;
+    color: #f2e6e5;
 }
 
 #room.lightwall {
