Add xr-layer to anchor tags

--- a/src/assets/room.css
+++ b/src/assets/room.css
@@ -128,14 +128,13 @@
       line-height: 1.6;
     }
 .alink a {
-  color: #78cfa8;
+  color: #fdfd96;
   text-decoration: underline;
 }
 .alink a:link {
-  color:#78cfa8;
+  color:#fdfd96;
 }
 .alink a:hover {
   color: white;
   background:#78cfa8;
 }
- 
