Fix anchor tags

--- a/src/assets/room.css
+++ b/src/assets/room.css
@@ -127,14 +127,14 @@
       font-weight: bold;
       line-height: 1.6;
     }
-.alink a {
+.alink {
   color: #fdfd96;
   text-decoration: underline;
 }
-.alink a:link {
+.alinklink {
   color:#fdfd96;
 }
-.alink a:hover {
+.alink:hover {
   color: white;
   background:#78cfa8;
 }
