Edit Pit Experiment apps

--- a/src/assets/room.css
+++ b/src/assets/room.css
@@ -76,8 +76,8 @@
 /* JP */
    /* adding margin only to the side */
    #room .spacer-side {
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 25px;
+    margin-right: 25px;
     }
 
     /*font styles*/
@@ -105,6 +105,11 @@
       margin:0;
       width: 100%;
       height: auto;
+    }
+    img.centerImg {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
     }
 
     /* label vue-app */
