--- a/src/assets/room.css
+++ b/src/assets/room.css
@@ -130,7 +130,8 @@
     .titleStyle {
       font-size:2em;
       font-weight: bold;
-      line-height: 1.6;
+      /*line-height: 1.6;*/
+      text-shadow: rgb(0, 0, 0) 0px 0 5px, 1px 0 1px white, 0 1px 1px white, -1px 0 1px white, 0 -1px  1px white;
     }
 .alink {
   color: #fdfd96;
