--- a/src/assets/room.css
+++ b/src/assets/room.css
@@ -131,7 +131,8 @@
 .titleStyle {
   font-size: 2em;
   font-weight: bold;
-  text-shadow: rgb(0, 0, 0) 0px 0 5px, 1px 0 1px white, 0 1px 1px white, -1px 0 1px white, 0 -1px  1px white;
+  padding: 5px;
+  text-shadow: 1px 0 2px black, 1px 0 4px white, 0 1px 2px black, 0 1px 4px white, -1px 0 2px black, -1px 0 4px white, 0 -1px  2px black, 0 -1px  4px white;
 }
 
 .alink {
