--- a/src/assets/room.css
+++ b/src/assets/room.css
@@ -138,12 +138,16 @@
 #room h2.history_title {
   text-align: left;
   font-size: 2rem;
+  float: left;
+  padding-bottom: 10px;
 }
 .history_subtitle{
   background-color: #E3E3E3;
+  padding: 0 6px;
   display: inline;
   float: right;
 }
+
 .history_spacer-side{
   margin: 20px 60px;
 }
@@ -151,17 +155,20 @@
   font-size: 2rem;
   font-weight: 100;
   opacity: 0.8;
-  text-align: right;
+  float: right;
+  /* text-align: right;
   position: absolute;
   top: 30px;
-  left:465px;
+  left:465px; */
   font-family: 'Montserrat', sans-serif;
 }
 .history_hr{
+  clear: both;
   border: 2px solid #E3E3E3;
   background-color: #E3E3E3;
 }
 .history_hr2{
+
   border: 0;
   border-bottom: 3px dotted #E3E3E3;
   padding-top:9px;
