--- a/src/assets/room.css
+++ b/src/assets/room.css
@@ -1,6 +1,5 @@
 /* Now, our styles */
-@import url('https://fonts.googleapis.com/css2?family=Buenard&family=Montserrat:wght@100&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Buenard&family=Montserrat:wght@100;900&display=swap');
 #room {
     font-family: Avenir,  Arial, Helvetica, sans-serif;
     -webkit-font-smoothing: antialiased;
@@ -86,7 +85,11 @@
     margin-left: 25px;
     margin-right: 25px;
     }
-
+    .lgquote{
+      font-family: 'Montserrat', sans-serif;
+      font-size: 5rem;
+      font-weight: 900;
+    }
     /*font styles*/
     .oblique {
       font-style:italic;
