Modify Quotes in Presence and Aura Gallery

--- a/src/assets/room.css
+++ b/src/assets/room.css
@@ -1,5 +1,5 @@
 /* Now, our styles */
-@import url('https://fonts.googleapis.com/css2?family=Buenard&family=Montserrat:wght@100;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Buenard&family=Montserrat:wght@100&family=Roboto:wght@900&display=swap');
 #room {
     font-family: Avenir,  Arial, Helvetica, sans-serif;
     -webkit-font-smoothing: antialiased;
@@ -86,9 +86,10 @@
     margin-right: 25px;
     }
     .lgquote{
-      font-family: 'Montserrat', sans-serif;
+      font-family: 'Roboto', sans-serif;
       font-size: 5rem;
       font-weight: 900;
+      color: #8E9097;
     }
     /*font styles*/
     .oblique {
