--- a/src/assets/room.css
+++ b/src/assets/room.css
@@ -203,3 +203,14 @@
   color: white;
   background:#78cfa8;
 }
+
+.test{
+  color: #fdfd96;
+  text-decoration: underline;
+  text-align: left;
+}
+.test:hover{
+  color: white;
+  background:#78cfa8;
+  text-align: left;
+}
