--- a/src/assets/room.css
+++ b/src/assets/room.css
@@ -214,3 +214,14 @@
   background:#78cfa8;
   text-align: left;
 }
+
+.test > a{
+  color: #fdfd96;
+  text-decoration: underline;
+  text-align: left;
+}
+.test > a:hover{
+  color: white;
+  background:#78cfa8;
+  text-align: left;
+}
