--- a/src/assets/reset.css
+++ b/src/assets/reset.css
@@ -2,6 +2,7 @@
    v4.0 | 20180602
    License: none (public domain)
 */
+@import url('https://fonts.googleapis.com/css2?family=Buenard&family=Montserrat:wght@100&family=Roboto:ital,wght@0,300;0,400;0,700;1,400&display=swap');
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -20,9 +21,18 @@ time, mark, audio, video {
   padding: 0;
   border: 0;
   font-size: 100%;
-  font: inherit;
+  font-family: 'Roboto', sans-serif;
   vertical-align: baseline;
 }
+
+em, i {
+  font-style: italic;
+}
+
+strong {
+  font-weight:bold;
+}
+
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, main, menu, nav, section {
